--- a/index.html
+++ b/index.html
@@ -1,1 +1,85 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Grant's Internet Website</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to right, #0d47a1, #1976d2);
+      color: white;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+    header {
+      padding: 30px;
+      background-color: rgba(0,0,50,0.6);
+    }
+    h1 {
+      font-size: 3em;
+      animation: bounce 2s infinite;
+    }
+    @keyframes bounce {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-20px); }
+    }
+    section {
+      padding: 30px;
+      max-width: 800px;
+      margin: auto;
+    }
+    img {
+      max-width: 100%;
+      border-radius: 10px;
+      margin: 10px 0;
+    }
+    iframe {
+      width: 560px;
+      height: 315px;
+      max-width: 100%;
+      border: none;
+      border-radius: 10px;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Grant's Internet Website</h1>
+    <p>Future Goal: Software Engineer 💻</p>
+  </header>
 
+  <section>
+    <h2>About Me</h2>
+    <p>Hello! My name is Grant. After high school, I want to study <strong>software engineering</strong>. I am building this site to learn more about the Internet and how it works.</p>
+  </section>
+
+  <section>
+    <h2>Unit 1 & 2 Vocabulary</h2>
+    <p>The Internet connects people across the globe 🌐. With <strong>digital communication</strong>, we share <strong>information</strong> instantly.  
+    In society, <strong>globalization</strong> has spread culture and ideas.  
+    Technology also raises concerns about <strong>privacy</strong> and <strong>security</strong> online.</p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/64/Internet_map_1024.jpg" alt="Global Internet Map">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Computer-network.svg" alt="Computer Network">
+  </section>
+
+  <section>
+    <h2>Video: How the Internet Works</h2>
+    <iframe src="https://www.youtube.com/embed/7_LPdttKXPc" allowfullscreen></iframe>
+  </section>
+
+  <section>
+    <h2>AI on the Internet</h2>
+    <p>Artificial Intelligence (AI) plays a big role in how we use the Internet today.  
+    Search engines and social media platforms use AI to recommend videos, posts, and ads.  
+    AI helps detect spam and cyberattacks, but it can also raise questions about privacy and bias.</p>
+    <p><em>Fun Fact:</em> Over 90% of online content is influenced in some way by AI algorithms!</p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/1/17/Artificial_Intelligence_Future.jpg" alt="AI and Internet">
+  </section>
+
+  <footer style="padding:20px; background:#0d47a1;">
+    <p>© 2025 Grant's Internet Website</p>
+  </footer>
+</body>
+</html>
