--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     Search engines and social media platforms use AI to recommend videos, posts, and ads.  
     AI helps detect spam and cyberattacks, but it can also raise questions about privacy and bias.</p>
     <p><em>Fun Fact:</em> Over 90% of online content is influenced in some way by AI algorithms!</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/1/17/Artificial_Intelligence_Future.jpg" alt="AI and Internet">
+    <img src="map.jpg" alt="AI and Internet">
   </section>
 
   <footer style="padding:20px; background:#0d47a1;">
