--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
     <p>The Internet connects people across the globe 🌐. With <strong>digital communication</strong>, we share <strong>information</strong> instantly.  
     In society, <strong>globalization</strong> has spread culture and ideas.  
     Technology also raises concerns about <strong>privacy</strong> and <strong>security</strong> online.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/6/64/Internet_map_1024.jpg" alt="Global Internet Map">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Computer-network.svg" alt="Computer Network">
+    <img src="computer.webp" alt="Global Internet Map">
   </section>
 
   <section>
