--- a/index.html
+++ b/index.html
@@ -56,35 +56,22 @@
   </section>
 
   <section>
-    <h2>Unit 1 & 2 Vocabulary</h2>
-    <p>Internet Protocol (IP): Assigns unique IP addresses to devices and determines how data is routed between them.
-
-
-Transmission Control Protocol (TCP): Ensures reliable, ordered, and error-checked delivery of data packets.
-
-
-User Datagram Protocol (UDP): A lightweight alternative to TCP with minimal error-checking (faster but less reliable).
-
-
-Packets: Small chunks of data into which larger messages are divided for transmission. Packets may arrive in order, out-of-order, or not at all.
-
-
-Routers: Specialized computers that forward data across networks, choosing the fastest available path.
-
-
-Domain Name System (DNS): Translates human-readable domain names (like example.com) into IP addresses.
-
-
-Hypertext Transfer Protocol (HTTP): Used for transmitting and requesting web pages and media on the World Wide Web.
-
-
-World Wide Web (WWW): A system of linked pages, media, and files browsable over HTTP. With <strong>digital communication</strong>, we share <strong>information</strong> instantly.  
-    In society, <strong>globalization</strong> has spread culture and ideas.  
-    Technology also raises concerns about <strong>privacy</strong> and <strong>security</strong> online.</p>
-    <img src="computer.webp" alt="Global Internet Map">
-  </section>
-
-  <section>
+  <h2>Unit 1 & 2 Vocabulary</h2>
+  <ul>
+    <li><strong>Internet Protocol (IP):</strong> Assigns unique IP addresses to devices and determines how data is routed between them.</li>
+    <li><strong>Transmission Control Protocol (TCP):</strong> Ensures reliable, ordered, and error-checked delivery of data packets.</li>
+    <li><strong>User Datagram Protocol (UDP):</strong> A lightweight alternative to TCP with minimal error-checking (faster but less reliable).</li>
+    <li><strong>Packets:</strong> Small chunks of data into which larger messages are divided for transmission. Packets may arrive in order, out-of-order, or not at all.</li>
+    <li><strong>Routers:</strong> Specialized computers that forward data across networks, choosing the fastest available path.</li>
+    <li><strong>Domain Name System (DNS):</strong> Translates human-readable domain names (like example.com) into IP addresses.</li>
+    <li><strong>Hypertext Transfer Protocol (HTTP):</strong> Used for transmitting and requesting web pages and media on the World Wide Web.</li>
+    <li><strong>World Wide Web (WWW):</strong> A system of linked pages, media, and files browsable over HTTP.</li>
+  </ul>
+  <p>With <strong>digital communication</strong>, we share <strong>information</strong> instantly.  
+  In society, <strong>globalization</strong> has spread culture and ideas.  
+  Technology also raises concerns about <strong>privacy</strong> and <strong>security</strong> online.</p>
+  <img src="computer.webp" alt="Global Internet Map">
+</section>
     <h2>Video: How the Internet Works</h2>
     <iframe src="https://www.youtube.com/embed/7_LPdttKXPc" allowfullscreen></iframe>
   </section>
